[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["minchin*"]
exclude = ["tests"]

[tool.setuptools.dynamic]
# this has to be the place the version is located via static analysis
version = {attr = "minchin.md_it.fancy_tasklists.__version__"}
# description = {attr = "minchin.jrnl.__description__"}  # must be pulled from file
readme = {file = ["README.rst"], content-type = "text/x-rst"}
dependencies = {file = [".requirements/base.in"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = [".requirements/dev.in"] }
# release = {file = [".requirements/release.in"] }
# docs = {file = [".requirements/docs.in"] }

[project]
name = "minchin.md-it.fancy-tasklists"
description = "Fancy Tasklists, for Markdown-IT-py"
dynamic = [
    "version",
    # "description",
    "readme",
    "dependencies",
    "optional-dependencies",
]
authors = [
    {name = "William Minchin", email="w_minchin@hotmail.com" },
]
maintainers = [
    {name = "William Minchin", email="w_minchin@hotmail.com" },
]
# requires-python = ">=3.6"
keywords = ["commonmark", "markdown", "plugin", "tasklist", "checkbox"]
license = {text = "ISC"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
# "Homepage" =
"Bug Tracker" = "https://github.com/MinchinWeb/minchin.md-it.fancy-tasklists/issues"
# Documentation = 
Repository = "https://github.com/MinchinWeb/minchin.md-it.fancy-tasklists"
Changelog = "https://github.com/MinchinWeb/minchin.md-it.fancy-tasklists/blob/master/CHANGELOG.rst"
# "Release Notes"


[tool.isort]
# Maintain compatibility with Black
profile = "black"
# multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

known_first_party = ["minchin"]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

skip_gitignore = true

[tool.black]
line-length = 88

[tool.flake8]
# requires flake8-pyproject to read this
ignore = [
    "E203",  # conflicts with `black`
    "W503",  # "line break before binary operator", conflicts with `black`
]
max-line-length = 88
count = true
